--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ p {
     background-color:darkblue;
 }
 body {
-    background-color:rgb(red, green, blue);
+    background-color: rgb(29, 29, 61);
 }
 
 h1 {
