cambio de color

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,11 @@
 p {
-    color:red;
-    background-color:darkblue;
+    color:darkorange
+    background-color:black;
 }
 body {
-    background-color: rgb(29, 29, 61);
+    background-color:aqua
 }
 
 h1 {
-    color:whitesmoke;
+    color:darkorange
 }
