--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,11 @@
 p {
-    color:darkorange
+    color:darkorange;
     background-color:black;
 }
 body {
-    background-color:aqua
+    background-color:aqua;
 }
 
 h1 {
-    color:darkorange
+    color:darkorange;
 }
